# FemtoXML

./: .gitignore  CMakeLists.txt  README.rst
doc/: changelog.txt  reference.txt
examples/create/: Makefile  create.c  project.spank
examples/test/: debug.spank  project.spank
femtoxml/examples/music/: Makefile  music.c  project.spank
femtoxml/examples/test/: Makefile  entities.xml  project.spank  test.c
femtoxml/spank/: common.inc  win32.spank
femtoxml/src/: entities.c  parse.c  vfile.c
femtoxml/verify/: fuzztest2.sh  project.spank
femtoxml/verify/tests/: test2.xml  test3.xml
femtoxml_cpp/: CMakeLists.txt
femtoxml_cpp/doc/: changelog.txt  reference.txt
femtoxml_cpp/examples/create/: Makefile  create.cpp  project.spank
femtoxml_cpp/examples/music/: Makefile  music.cpp  project.spank
femtoxml_cpp/include/: document.h  element.h  exception.h  settings.h
femtoxml_cpp/pkg-config/: femtoxml_cpp.pc
femtoxml_cpp/spank/: common.inc  project.spank  win32.spank
femtoxml_cpp/src/: document.cpp  element.cpp  exception.cpp  settings.cpp
include/: femtoxml.h  femtoxmli.h
pkg-config/: femtoxml.pc
spank/: common.inc  project.spank  win32.spank
src/: entities.c  message.c  output.c  parse.c  structure.c
verify/: fuzztest.sh  verify.c
verify/tests/: test.xml  test4.xml
